--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8e6ab895",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b314e990",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "885efd9b",
    "metadata": {},
    "outputs": [
@@ -43,11 +43,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_12464\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n",
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_12464\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n",
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_12464\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n"
      ]
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "dc872bc2",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "6566a393",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "b56eb941",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "6d085a80",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "4fec7448",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "61e30219",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "5f320a85",
    "metadata": {},
    "outputs": [
@@ -310,6 +310,13 @@
     "after = combined.shape[0]\n",
     "print(f\"Filtered out {before - after} zero-power rows. Remaining: {after}\")\n",
     "\n",
+    "# Drop unnecessary columns\n",
+    "combined.drop(columns=['PLANT_ID', 'SOURCE_KEY_x', 'SOURCE_KEY_y', 'DAY'], inplace=True)\n",
+    "\n",
+    "# Convert date to datetime\n",
+    "combined['DATE_TIME'] = pd.to_datetime(combined['DATE_TIME'])\n",
+    "\n",
+    "\n",
     "# Define features and target\n",
     "features = ['AMBIENT_TEMPERATURE', 'MODULE_TEMPERATURE', 'IRRADIATION', 'HOUR', 'MONTH']\n",
     "X = combined[features]\n",
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "c1d34286",
    "metadata": {},
    "outputs": [
@@ -338,7 +345,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined shape: (68845, 14)\n"
+      "Combined shape: (68845, 10)\n"
      ]
     }
    ],
