move all notebooks to Notebooks directory

--- a/Notebooks/Model_Training.ipynb
+++ b/Notebooks/Model_Training.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "876214bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "385ee423",
    "metadata": {},
    "outputs": [
@@ -150,13 +151,13 @@
        "4            24.088446           22.206757     0.005887     6      5  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./Data Sets/Cleaned_Solar_Data.csv\")\n",
+    "df = pd.read_csv(\".././Data Sets/Cleaned_Solar_Data.csv\")\n",
     "print(\"Cleaned data loaded successfully!\")\n",
     "print(df.shape)\n",
     "df.head()"
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "5b601397",
    "metadata": {},
    "outputs": [
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "fff63281",
    "metadata": {},
    "outputs": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3c6b4361",
    "metadata": {},
    "outputs": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "40c3f5ed",
    "metadata": {},
    "outputs": [],
@@ -268,17 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "8d6d737a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(\"./Models\", exist_ok=True)"
+    "os.makedirs(\".././Models\", exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ad323b96",
    "metadata": {},
    "outputs": [
@@ -286,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Random Forest model saved successfully at ./Models/solar_rf_model.pkl\n",
+      "Random Forest model saved successfully at ./Models/solar_rf_model.pkl\n",
       "\n",
       "📊 Final Random Forest Evaluation:\n",
       "R² Score: 0.9892\n",
@@ -309,7 +310,7 @@
     "\n",
     "\n",
     "# Save best model\n",
-    "joblib.dump(models[\"Random Forest\"], \"./Models/solar_rf_model.pkl\")\n",
+    "joblib.dump(models[\"Random Forest\"], \".././Models/solar_rf_model.pkl\")\n",
     "print(\"Random Forest model saved successfully at ./Models/solar_rf_model.pkl\")\n",
     "\n",
     "# Predict on test set\n",
