--- a/Notebooks/Data_Visualization.ipynb
+++ b/Notebooks/Data_Visualization.ipynb
@@ -153,7 +153,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load the cleaned data\n",
-    "df = pd.read_csv(\"./Data Sets/Cleaned_Solar_Data.csv\")\n",
+    "df = pd.read_csv(\".././Data Sets/Cleaned_Solar_Data.csv\")\n",
     "print(df.shape)\n",
     "df.head()\n"
    ]
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d3045603",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_11960\\3738571285.py:10: UserWarning: Glyph 128279 (\\N{LINK SYMBOL}) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_14088\\3738571285.py:10: UserWarning: Glyph 128279 (\\N{LINK SYMBOL}) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "C:\\Users\\peerm\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 128279 (\\N{LINK SYMBOL}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "51eb4265",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "10cbccfe",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3ace9f6a",
    "metadata": {},
    "outputs": [
