--- a/Notebooks/preprocessing.ipynb
+++ b/Notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8e6ab895",
    "metadata": {},
    "outputs": [],
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b314e990",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen1 = pd.read_csv(\"./Data Sets/Plant_1_Generation_Data.csv\")\n",
-    "weather1 = pd.read_csv(\"./Data Sets/Plant_1_Weather_Sensor_Data.csv\")\n",
+    "gen1 = pd.read_csv(\".././Data Sets/Plant_1_Generation_Data.csv\")\n",
+    "weather1 = pd.read_csv(\".././Data Sets/Plant_1_Weather_Sensor_Data.csv\")\n",
     "\n",
-    "gen2 = pd.read_csv(\"./Data Sets/Plant_2_Generation_Data.csv\")\n",
-    "weather2 = pd.read_csv(\"./Data Sets/Plant_2_Weather_Sensor_Data.csv\")\n"
+    "gen2 = pd.read_csv(\".././Data Sets/Plant_2_Generation_Data.csv\")\n",
+    "weather2 = pd.read_csv(\".././Data Sets/Plant_2_Weather_Sensor_Data.csv\")\n"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "885efd9b",
    "metadata": {},
    "outputs": [
@@ -43,11 +43,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_11304\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n",
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_11304\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n",
-      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_3152\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\peerm\\AppData\\Local\\Temp\\ipykernel_11304\\4063308798.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  df['DATE_TIME'] = pd.to_datetime(df['DATE_TIME'], errors='coerce', dayfirst=True)\n"
      ]
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dc872bc2",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6566a393",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b56eb941",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6d085a80",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4fec7448",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "61e30219",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "5f320a85",
    "metadata": {},
    "outputs": [
@@ -331,13 +331,13 @@
     "print(y.head())\n",
     "\n",
     "# 💾 Step 8: Save cleaned dataset for reuse\n",
-    "combined.to_csv(\"./Data Sets/Cleaned_Solar_Data.csv\", index=False)\n",
+    "combined.to_csv(\".././Data Sets/Cleaned_Solar_Data.csv\", index=False)\n",
     "print(\"\\n✅ Cleaned dataset saved successfully as 'Cleaned_Solar_Data.csv'\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c1d34286",
    "metadata": {},
    "outputs": [
